<?xml version="1.0"?>
<package format="2">
  <name>depthimage_to_navscan</name>
  <version>0.0.0</version>
  <description>The depthimage_to_navscan package</description>

  <maintainer email="PetervDooren@outlook.com">Peter van Dooren</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geolib2</depend>
  <depend>image_geometry</depend>
  <depend>roscpp</depend>

  <test_depend>sensor_msgs</test_depend>
</package>
