<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depthimage_to_navscan</name>
  <version>0.0.0</version>
  <description>Algorithms to generate a pointcloud obstacle message based on depthimages</description>

  <maintainer email="PetervDooren@outlook.com">Peter van Dooren</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geolib2</depend>
  <depend>image_geometry</depend>
  <depend>libopencv-dev</depend>

  <test_depend>catkin_lint_cmake</test_depend>
  <test_depend>sensor_msgs</test_depend>

</package>
