<?xml version="1.0"?>
<package format="2">
  <name>depthimage_to_navscan_rgbd</name>
  <version>0.0.0</version>
  <description>The depthimage_to_navscan rgbd integration package</description>

  <maintainer email="PetervDooren@outlook.com">Peter van Dooren</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rgbd</depend>
  <depend>depthimage_to_navscan</depend>
  <depend>ed_sensor_integration</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
</package>
