<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depthimage_to_navscan_rgbd</name>
  <version>0.0.0</version>
  <description>The depthimage_to_navscan rgbd integration package</description>

  <maintainer email="PetervDooren@outlook.com">Peter van Dooren</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>depthimage_to_navscan</depend>
  <depend>rgbd</depend>
  <depend>rgbd_image_buffer</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

</package>
