<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depthimage_to_navscan_rgbd</name>
  <version>0.0.0</version>
  <description>The depthimage_to_navscan rgbd integration package</description>

  <maintainer email="PetervDooren@outlook.com">Peter van Dooren</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>depthimage_to_navscan</build_depend>
  <build_depend>rgbd</build_depend>
  <build_depend>rgbd_image_buffer</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>depthimage_to_navscan</exec_depend>
  <exec_depend>rgbd</exec_depend>
  <exec_depend>rgbd_image_buffer</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>catkin_lint_cmake</test_depend>

</package>
